Fix dependency bump